# slack_bot

./: Cargo.toml  Makefile
scripts/: connect_websocket.sh  create_modal.sh  send_message.sh
src/: infra.rs  main.rs
src/infra/: env.rs  server.rs
src/infra/repository/: slack.rs
src/infra/repository/slack/: event.rs  socket_mode.rs
src/infra/repository/slack/event/: create_modal.rs
src/infra/repository/slack/socket_mode/: connection.rs
